package codenames.structure;

public enum CardType {
    Black,White,Red,Blue
}
